0.1 10apr23
* initial version
0.2
* special accumulator for ww and wawa